--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="login_title">LOGIN</string>
     <string name="username">username</string>
     <string name="password">password</string>
+    <string name="title_trasaction">Transaction</string>
+    <string name="title_profile">Profile</string>
 
 
 </resources>
