--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="title_home">Transactions</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Profile</string>
+    <string name="done">DONE</string>
 
 </resources>
